--- a/pages/activite.html
+++ b/pages/activite.html
@@ -24,11 +24,11 @@
             <h2>LYCEE <span>EXCELLENCE</span>.</h2>
         </div>
         <ul id="navMenu">
-            <li><a href="#" onclick="closeMenu()">Acceuil</a></li>
-            <li><a href="#" onclick="closeMenu()">Programme</a></li>
-            <li><a href="#" onclick="closeMenu()">Activite</a></li>
-            <li><a href="#" onclick="closeMenu()">Contact</a></li>
-            <li><a href="#" class="last-a">Inscription</a></li>
+            <li><a href="../index.html" onclick="closeMenu()">Acceuil</a></li>
+            <li><a href="Programme.html" onclick="closeMenu()">Programme</a></li>
+            <li><a href="activite.html" onclick="closeMenu()">Activite</a></li>
+            <li><a href="contact.html" onclick="closeMenu()">Contact</a></li>
+            <li><a href="insciption.html" class="last-a">Inscription</a></li>
         </ul>
         <div class="burger-menu" onclick="toggleMenu()">
             <span></span>
@@ -45,6 +45,34 @@
     <section class="activite-cards" id="activite-cards"></section>
 
 
+
+    
+    <footer class="footer">
+        <div class="footer_brand">
+            <h2 class="footer_title">LyceeExcellence.</h2>
+        </div>
+        <div class="footer_links">
+            <h4 class="footer_heading">Links</h4>
+            <ul class="footer_list">
+                <li><a href="#" class="footer_item">Acceuil</a></li>
+                <li><a href="#" class="footer_item">Programme</a></li>
+                <li><a href="#" class="footer_item">Activite</a></li>
+                <li><a href="#" class="footer_item">Contact</a></li>
+                <li><a href="#" class="footer_item">Inscription</a></li>
+            </ul>
+        </div>
+        <div class="footer_contact">
+            <h3 class="footer_heading">Contact</h3>
+            <ul class="footer_list">
+                <li class="footer_item">Nador, LyceeExcellence</li>
+                <li class="footer_item">+212 684 32 09 03</li>
+                <li class="footer_item">lyceeExcellence1@gmail.com</li>
+            </ul>
+        </div>
+        <div>
+
+        </div>
+    </footer>
 
     <script src="../assets/JS/script.js"></script>
 </body>
