--- a/pages/insciption.html
+++ b/pages/insciption.html
@@ -19,15 +19,15 @@
   </header>
   <nav>
     <div class="title">
-      <img src="assets/image/logo-ecole.jpg" alt="">
+      <img src="../assets/image/image-logo-lycee-Excellence.png" alt="">
       <h2>Lycee Excellence.</h2>
     </div>
     <ul>
-      <li><a href="#">Acceuil</a></li>
-      <li><a href="#">Programme</a></li>
-      <li><a href="#">Activite</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#" class="last-a">Inscription</a></li>
+      <li><a href="../index.html">Acceuil</a></li>
+      <li><a href="Programme.html">Programme</a></li>
+      <li><a href="activite.html">Activite</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="insciption.html" class="last-a">Inscription</a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
 
     <div class="child1">
       <div>
-        <img src="images/pexels-sultan-raimosan-175877-5288660.jpg" alt="image ">
+        <img src="../assets/image/image-inscription.jpg" alt="image ">
       </div>
     </div>
     <div class="child2">
