--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
         <div class="footer_links">
             <h4 class="footer_heading">Links</h4>
             <ul class="footer_list">
-                <li><a href="#" class="footer_item">Acceuil</a></li>
-                <li><a href="#" class="footer_item">Programme</a></li>
-                <li><a href="#" class="footer_item">Activite</a></li>
-                <li><a href="#" class="footer_item">Contact</a></li>
-                <li><a href="#" class="footer_item">Inscription</a></li>
+                <li><a href="index.html" class="footer_item">Acceuil</a></li>
+                <li><a href="pages/Programme.html" class="footer_item">Programme</a></li>
+                <li><a href="pages/activite.html" class="footer_item">Activite</a></li>
+                <li><a href="pages/contact.html" class="footer_item">Contact</a></li>
+                <li><a href="pages/insciption.html" class="footer_item">Inscription</a></li>
             </ul>
         </div>
         <div class="footer_contact">
