--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <h2>LYCEE <span>EXCELLENCE</span>.</h2>
         </div>
         <ul id="navMenu">
-            <li><a href="#" onclick="closeMenu()">Acceuil</a></li>
-            <li><a href="#" onclick="closeMenu()">Programme</a></li>
-            <li><a href="#" onclick="closeMenu()">Activite</a></li>
-            <li><a href="#" onclick="closeMenu()">Contact</a></li>
-            <li><a href="#" class="last-a">Inscription</a></li>
+            <li><a href="index.html" onclick="closeMenu()">Acceuil</a></li>
+            <li><a href="pages/Programme.html" onclick="closeMenu()">Programme</a></li>
+            <li><a href="pages/activite.html" onclick="closeMenu()">Activite</a></li>
+            <li><a href="pages/contact.html" onclick="closeMenu()">Contact</a></li>
+            <li><a href="pages/insciption.html" class="last-a">Inscription</a></li>
         </ul>
         <div class="burger-menu" onclick="toggleMenu()">
             <span></span>
