--- a/pages/insciption.html
+++ b/pages/insciption.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LyceeExcellence</title>
-  <link rel="stylesheet" href="inscription.css">
+  <link rel="stylesheet" href="../assets/style/inscription.css">
 
 
 
