--- a/pages/Programme.html
+++ b/pages/Programme.html
@@ -45,7 +45,7 @@
                 <p>Mot de bienvenue du directeur dans l'amphithéâtre principal.
                     Présentation générale de l'établissement et du déroulement de la journée.</p>
             </div>
-            <img src="/assets/image/science.jpg" alt="accueil img">
+            <img src="../assets/image/science.jpg" alt="accueil img">
         </div>
         <div class="program-details">
             <h1>09:30 - 11:00</h1>
@@ -58,7 +58,7 @@
                     Expériences de chimie, observations au microscope et démonstrations physiques.
                     Inscription sur place.</p>
             </div>
-            <img src="/assets/image/science.jpg" alt="science img">
+            <img src="../assets/image/science.jpg" alt="science img">
         </div>
         <div class="program-details">
             <h1>11:00 - 12:30</h1>
@@ -70,7 +70,7 @@
                 <p>Concert de l'orchestre de l'école, exposition des travaux d'élèves,
                     démonstrations de peinture en direct. Visite libre des salles d'art.</p>
             </div>
-            <img src="/assets/image/orchestre.jpg" alt="music img">
+            <img src="../assets/image/orchestre.jpg" alt="music img">
         </div>
         <div class="program-details">
             <h1>12:30 - 14:00</h1>
@@ -82,7 +82,7 @@
                 <p>Buffet gratuit préparé par les élèves de la section restauration.
                     Spécialités variées et produits locaux. Cafétéria ouverte.</p>
             </div>
-            <img src="/assets/image/buffet.jpg" alt="buffet img">
+            <img src="../assets/image/buffet.jpg" alt="buffet img">
         </div>
         <div class="program-details">
             <h1>14:00 - 16:00</h1>
@@ -94,7 +94,7 @@
                 <p>Tournois de basketball et football. Initiation à l'escalade.
                     Démonstrations de gymnastique par nos élèves. Équipements fournis.</p>
             </div>
-            <img src="/assets/image/sport.jpg" alt="sport img">
+            <img src="../assets/image/sport.jpg" alt="sport img">
         </div>
         <div class="program-details">
             <h1>16:00 - 17:30</h1>
@@ -107,7 +107,7 @@
                     Ateliers de programmation et robotique.
                     Démonstrations d'impression 3D et réalité virtuelle.</p>
             </div>
-            <img src="/assets/image/robotique.jpg" alt="tech img">
+            <img src="../assets/image/robotique.jpg" alt="tech img">
         </div>
         <div class="program-details">
             <h1>17:30 - 18:00</h1>
@@ -120,7 +120,7 @@
                     Informations sur les inscriptions pour l'année prochaine.
                     Tombola avec de nombreux lots à gagner.</p>
             </div>
-            <img src="/assets/image/conference.jpg" alt="Conférence img">
+            <img src="../assets/image/conference.jpg" alt="Conférence img">
         </div>
     </main>
 
