--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="title">
-            <img src="/assets/image/image-logo-lycee-Excellence.png" alt="">
+            <img src="../assets/image/image-logo-lycee-Excellence.png" alt="">
             <h2>Lycee Excellence.</h2>
         </div>
         <ul>
